Fri Dec 21 16:06:13 2007  Tanaka Akira  <akr@fsij.org>

	* re.c (append_utf8): use rb_utf8_encoding() instead of
	  rb_enc_find("utf-8").

Fri Dec 21 15:59:46 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_init): use enc_register_at() directly.

	* encoding.c (rb_utf8_encoding): returns utf-8 encoding.

	* include/ruby/encoding.h (rb_utf8_encoding): prototyped.

	* parse.y (UTF8_ENC): uses rb_utf8_encoding().

Fri Dec 21 15:31:59 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_s_read): allow specifying encoding explicitly.

	* io.c (rb_io_binmode): specifies encoding to ASCII-8BIT (binary).

	* io.c (rb_io_s_read): IO should be in binary mode when offset is
	  specified.

	* encoding.c (rb_to_encoding): returns default encoding if no
	  corresponding encoding found.

Fri Dec 21 15:24:22 2007  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (initialize): accept service name.  changed
	  the defalut value of the old style +verify+ argument to true.

Fri Dec 21 15:15:44 2007  Tanaka Akira  <akr@fsij.org>

	* gc.c (rb_garbage_collect): new function for debugging.

Fri Dec 21 15:16:00 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_to_encoding_index): should return error instead of
	  exception even if type is incorrect.

Fri Dec 21 14:58:27 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enumerator.c (enumerator_init_copy): prohibit cloning of
	  generators since Fibers cannot be copied.

	* enumerator.c (enumerator_init_copy): typo fixed.

Fri Dec 21 14:46:07 2007  Tanaka Akira  <akr@fsij.org>

	* io.c (Init_IO): define IO::BINARY even if O_BINARY is not exist.

Fri Dec 21 14:01:14 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_system.rb (TestSystem::valid_syntax): apply
	  ASCII-8BIT encoding explicitly.

	* re.c (rb_reg_prepare_re): add encoding name in the message.

Fri Dec 21 13:54:05 2007  Tanaka Akira  <akr@fsij.org>

	* re.c: change "character encodings differ" error messages.
